--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "47d48b73-69d3-45cf-a35e-ec04f73e22fa"
 authors = ["Cédric BELMANT"]
 version = "0.1.0"
 
+[weakdeps]
+B = "0.1"
+
 [compat]
 julia = "1.10"
 
